# langchain

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt  run.bat
app/: __init__.py  dependencies.py  main.py
app/routers/: __init__.py  agent.py  chat.py  extraction.py  memory.py  prompt.py  rag.py
static/: index.html  styles.css
static/js/: agent.js  chat.js  config.js  extraction.js  main.js  memory.js  prompt.js  rag.js  ui.js
