[project]
name = "langchain-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.12",
]
